--- a/index.html
+++ b/index.html
@@ -33,23 +33,21 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
+  <!--==========================
+  Include html files
+  ============================-->
+  <!-- Main bibliography  -->
   <link href="biblio.html" rel="import">
-
-<!--   <link href="blog.html" rel="import" />
+<!--   <link href="map_test/indexmap.html" rel="import">
  -->
-  <!-- =======================================================
-    Theme Name: Rapid
-    Theme URL: https://bootstrapmade.com/rapid-multipurpose-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
-
   <!--==========================
   Include a map
   ============================-->
-<!--  <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
- -->  <!-- Nous chargeons les fichiers CDN de Leaflet. Le CSS AVANT le JS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
+  <link rel="shortcut icon" type="image/x-icon" href="docs/images/favicon.ico" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
+
+
 </head>
 
 <body>
@@ -87,14 +85,14 @@
           <li class="drop-down"><a href="">Project</a>
               <ul>
                 <li><a href="#studyAreas">Study areas</a></li>
-                <li><a href="#">WP1</a></li>
-                <li><a href="#">WP2</a></li>
-                <li><a href="#">WP3</a></li>
-                <li><a href="#">WP4</a></li>
+                <li><a href="#wp1">WP1</a></li>
+                <li><a href="#wp2">WP2</a></li>
+                <li><a href="#wp3">WP3</a></li>
+                <li><a href="#wp4">WP4</a></li>
                 <li><a href="#">Related works</a></li>
               </ul>
           </li>
-          <li class="drop-down"><a href="team">About us</a>
+          <li class="drop-down"><a href="contributors">About us</a>
               <ul>
                 <li><a href="#contributors">Contributors</a></li>
                 <li><a href="#projectPartners">Project partners</a></li>
@@ -215,25 +213,92 @@
 
     <div class="container">
         <div class="row">
-          <div class="studyAreas-content">
-<!--             <div class="col-lg-5 col-md-6">
- -->            <h2>Geophysical Observation Field sites catalog</h2>
-            <h3>Objectives</h3>
+<!--           <div class="studyAreas-content">
+ -->            
+            <div class="col-lg-5 col-md-6">
+            
+<!--             <h2>Geophysical Observation Field sites catalog</h2>
+ -->            <h3>Objectives</h3>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i> Build a repository that is trust by the community and that is a preffered storage facility</li>
-              <li><i class="ion-android-checkmark-circle"></i> Gather datasets needed for modeling </li>
-              <li><i class="ion-android-checkmark-circle"></i> Create synergies </li>
-              <li><i class="ion-android-checkmark-circle"></i> Finding easily georeferenced data-sets linked to research themes </li>
-              <li><i class="ion-android-checkmark-circle"></i> Facilitate communication to stakeholders </li>
+<!--               <li><i class="ion-android-checkmark-circle"></i> Build a repository that is trust by the community and that is a preffered storage facility</li>
+ -->              <li> Gather datasets needed for modeling </li>
+<!-- <li><i class="ion-android-checkmark-circle"></i> Create synergies </li>               
+ -->              <li> Finding easily georeferenced data-sets linked to research themes </li>
+              <li> Facilitate communication to stakeholders </li>
             </ul>
-<!--             </div> 
- -->          <div class="col-lg-7 col-md-6">
+            </div> 
+          
+            <div class="col-lg-7 col-md-6">
+<!--                 Catalog of georeferenced metadatas
+ -->
             <div id="map" style="width: 600px; height: 400px;"></div>
           </div>
+<!--          </div> 
+ -->      </div> 
+    </div> 
+
+    <div class="container">
+        <div class="row">
+          <div class="studyAreas-content">
+<!--             <div class="col-lg-5 col-md-6">
+            <h2>Geophysical Observation Field sites catalog</h2>
+            <h3>Objectives</h3> -->
+          </div>
          </div> 
+      </div> 
+    </div> 
 
 
-    </section><!-- #Publications -->
+    </section><!-- #studyAreas -->
+
+
+    <section id="wp1" class="section-bg">
+
+
+    <div class="container">
+        <div class="row">
+          <div class="wp1-content">
+          <h2>Work packages</h2>
+          <h3>WP1</h3>
+          <ul>
+            <li><i class="ion-android-checkmark-circle"></i> Straightforward way to use ERT and MALM as non-invasive methods for roots soil plant interaction monitoring via RWU.</li>
+            <li><i class="ion-android-checkmark-circle"></i> Innovative way to improve classical geoelectrical non-invasive methods via an extension of ERT and MALM to multi-frequency assessment (time domain or Spectral induced polarization) of the roots response.</li>
+            <li><i class="ion-android-checkmark-circle"></i> New inversion algorithms for direct roots detection via a combination of multiple geophysical methods analysis in combination with biological and plant physiological assumptions and farmer know-how.</li>
+          </ul>
+         </div> 
+      </div> 
+    </div> 
+
+    </section><!-- #wp1 -->
+
+
+<!--       </section>
+ -->
+      <!-- <section id="wp2" class="section-bg">
+        <p><strong>WP2 </strong>deals with the coupling between subsurface and surface observation (including remotely), acquired via geophysical monitoring (arising from the methodology developed during the WP1) and plant physiology and atmospheric measurements. WP2 will provide results for three deliverables:</p>
+        <ul>
+           <li><i class="ion-android-checkmark-circle"></i> Improve and adapt pedotransfer functions to compute subsurface understandable proxies (FTSW and Soil hydraulic conductivity) notably in order to meet the new big data challenge (interoperable, re-usable).</li>
+           <li><i class="ion-android-checkmark-circle"></i> Monitor these proxies in relation with the phenological stage of the plant and irrigation practices.</li>
+          <li><i class="ion-android-checkmark-circle"></i> Study correlation between geophysics (SS), plant based observations (PB) such as physiological state of plants from leaf potential or sap flow, surface data (S) notably with EC measurements and remote observations (R) with hyperspectral imaging.</li>
+        </ul>
+      </section>
+
+      <section id="wp3" class="section-bg">
+         <strong>WP3</strong> deals with data assimilation (DA) of geophysical information into hydrogeophysical modelling (<em>Goal 3</em>) for the identification of active root zones. WP1 and WP2 outputs will serve as inputs. One deliverable is expected:</p>
+        <ul>
+           <li><i class="ion-android-checkmark-circle"></i> Methodology for DA of geophysical and surface data in a RWU model using Ensemble Kalman Filters.</li>
+        </ul>
+      </section>
+
+      <section id="wp4" class="section-bg">
+        <p><strong>WP4 </strong>aims at disseminating the gained knowledge across all communities (<em>Goal 5</em>). We plan four deliverables:</p>
+          <ul>
+            <li><i class="ion-android-checkmark-circle"></i> Data management plan: gather dataset of partner research teams in an open web platform.</li>
+            <li><i class="ion-android-checkmark-circle"></i> Transfer and communication towards peers.</li>
+            <li><i class="ion-android-checkmark-circle"></i> Transfer and communication towards students, winemakers and farmers.</li>
+          </ul>
+      </section>
+
 
 
     <!--==========================
@@ -391,7 +456,10 @@
   <!-- Uncomment below i you want to use a preloader -->
   <!-- <div id="preloader"></div> -->
 
-  <!-- JavaScript Libraries -->
+
+  <!--==========================
+  -- JavaScript Libraries 
+  ============================-->
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -410,46 +478,8 @@
   <script src="js/main.js"></script>
 
   <!-- Template map Javascript File -->
- <!-- Fichiers Javascript -->
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script type="text/javascript">
-
-            // On initialise la latitude et la longitude de Paris (centre de la carte)
-            var lat = 48.852969;
-            var lon = 2.349903;
-            var macarte = null;
-            // Fonction d'initialisation de la carte
-            var villes = {
-              "Padua": { "lat": 45.40797, "lon": 11.88586 },
-              "Bordeaux": { "lat": 44.836151, "lon": -0.580816 },
-              "Berkeley": { "lat":  37.871666, "lon": -122.272781 },
-            };
-
-            // Fonction d'initialisation de la carte
-            function initMap() {
-              // Créer l'objet "macarte" et l'insèrer dans l'élément HTML qui a l'ID "map"
-              macarte = L.map('map').setView([lat, lon], 2);
-              // macarte.fitBounds(); // Nous demandons à ce que tous les marqueurs soient visibles, et ajoutons un padding (pad(0.5)) pour que les marqueurs ne soient pas coupés
-
-              // Leaflet ne récupère pas les cartes (tiles) sur un serveur par défaut. Nous devons lui préciser où nous souhaitons les récupérer. Ici, openstreetmap.fr
-              L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
-                // Il est toujours bien de laisser le lien vers la source des données
-                attribution: 'données © OpenStreetMap/ODbL - rendu OSM France',
-                minZoom: 1,
-                maxZoom: 20
-              }).addTo(macarte);
-              // Nous parcourons la liste des villes
-              for (ville in villes) {
-                var marker = L.marker([villes[ville].lat, villes[ville].lon]).addTo(macarte);
-              }                 
-            }
-            window.onload = function(){
-    // Fonction d'initialisation qui s'exécute lorsque le DOM est chargé
-    // var marker = L.marker([lat, lon]).addTo(macarte);
-
-    initMap(); 
-            };
-        </script>
+  <script src="map/sample-geojson.js" type="text/javascript"></script>
+  <script src="map/leaflet.js" type="text/javascript"></script>
 
 </body>
 </html>
