--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
           <li><a href="#publications">Publications</a></li>
 <!--           <li><a href="blog.html">Blog</a></li>
  -->          
+          <li>><a href="#media">Media</a></li>    
           <li class="drop-down"><a href="">Project</a>
               <ul>
                 <li><a href="#studyAreas">Study areas catalog</a></li>
@@ -194,17 +195,25 @@
       </div>
 
     </section><!-- #about -->
-
+  
+    <!--==========================
+      Media Section
+    ============================-->
+    <section id="media" class="section-bg">
+      <div class="container">
+        <div class="row">
+          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2020 was a year like no other, that changed our lives deeply. From online classes to empty offices, people at <a href="https://twitter.com/hashtag/GeoUnipd?src=hash&amp;ref_src=twsrc%5Etfw">#GeoUnipd</a> quickly faced it and made the best of it<br><br>📺 To sum up 2020, we collected some of our main highlights in a short video. Check it out: <a href="https://t.co/Ueq4nzuVvv">https://t.co/Ueq4nzuVvv</a> <a href="https://t.co/r8eYWoaU9N">pic.twitter.com/r8eYWoaU9N</a></p>&mdash; Dipartimento di Geoscienze - Unipd (@GeoUnipd) <a href="https://twitter.com/GeoUnipd/status/1351944065693188099?ref_src=twsrc%5Etfw">January 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+       <div class="row">
+         My interview to <a href="https://www.unipd.it/en/msca-mary" class="btn btn-outline-primary">SuccessStories@Unipd </a>    
+      </div>
+    </section>
 
     <!--==========================
       Publication Section
     ============================-->
     <section id="publications" class="section-bg">
       <div class="container">
-        <div class="row">
-          <blockquote class="twitter-tweet"><p lang="en" dir="ltr">2020 was a year like no other, that changed our lives deeply. From online classes to empty offices, people at <a href="https://twitter.com/hashtag/GeoUnipd?src=hash&amp;ref_src=twsrc%5Etfw">#GeoUnipd</a> quickly faced it and made the best of it<br><br>📺 To sum up 2020, we collected some of our main highlights in a short video. Check it out: <a href="https://t.co/Ueq4nzuVvv">https://t.co/Ueq4nzuVvv</a> <a href="https://t.co/r8eYWoaU9N">pic.twitter.com/r8eYWoaU9N</a></p>&mdash; Dipartimento di Geoscienze - Unipd (@GeoUnipd) <a href="https://twitter.com/GeoUnipd/status/1351944065693188099?ref_src=twsrc%5Etfw">January 20, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
-
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Publications</h3>
